<resources>
    <string name="id_publisher_ads" translatable="false">ca-app-pub-2083012446340886~3562189502</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-2083012446340886/6515655906</string>
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-2083012446340886/7992389109</string>

    <string name="app_name" translatable="false">RolerMaster</string>
    <string name="app_developer" translatable="false">OlivaDevelop</string>

    <string name="lorem_large" translatable="false">In hac habitasse platea dictumst. Integer vestibulum diam et lacus hendrerit accumsan. Pellentesque efficitur leo et ligula commodo sollicitudin. In lectus augue, posuere posuere mi in, sollicitudin porttitor diam. Ut posuere sollicitudin viverra. Nunc vel maximus tellus. Vestibulum quam nibh, mattis in pulvinar at, hendrerit sed tortor. Nulla quis accumsan libero. Maecenas cursus, ante nec dictum euismod, risus justo egestas purus, nec hendrerit odio nibh vel dolor. Phasellus aliquet erat non magna aliquam, ut condimentum leo hendrerit. Sed dictum posuere vehicula. In id justo a ante commodo tincidunt at quis massa. Curabitur rhoncus, sem sed pharetra finibus, odio tortor pulvinar massa, eleifend tempus ligula metus at augue. Mauris iaculis quis risus ac pharetra. Aliquam auctor purus sit amet ligula tristique dictum.</string>
    <string name="lorem_small" translatable="false">Morbi sed accumsan lacus, ac molestie nibh.</string>
    <string name="true_dialog" translatable="false">@android:string/ok</string>
    <string name="false_dialog" translatable="false">@android:string/cancel</string>
    <string name="white_space" formatted="false" translatable="false"> </string>

    <!-- Común -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="option_not_available">TRADUCIR</string>

    <!-- Menú lateral -->
    <string name="nav_games">TRADUCIR</string>
    <string name="nav_trash">TRADUCIR</string>
    <string name="nav_profile">TRADUCIR</string>
    <string name="nav_tools_title">TRADUCIR</string>
    <string name="nav_tools">TRADUCIR</string>
    <string name="nav_exit">TRADUCIR</string>
    <string name="nav_login">TRADUCIR</string>
    <string name="nav_logout">TRADUCIR</string>
    <string name="nav_home">TRADUCIR</string>

    <!-- Texto dialogs  -->
    <string name="nav_dialog_exit_title">TRADUCIR</string>
    <string name="nav_dialog_sure_message">TRADUCIR</string>
    <string name="nav_dialog_logout_title">TRADUCIR</string>
    <string name="nav_dialog_exit_2_title">TRADUCIR</string>
    <string name="nav_dialog_exit_2_message">TRADUCIR</string>

    <!-- Pantalla de inicio -->
    <string name="blank_subtitle">TRADUCIR</string>
    <string name="blank_welcome">TRADUCIR</string>
    <string name="blank_guest">TRADUCIR</string>
    <string name="blank_last_project">TRADUCIR</string>

    <!-- Pantalla de login -->
    <string name="login_title">TRADUCIR</string>
    <string name="login_user_title">TRADUCIR</string>
    <string name="login_user_username">TRADUCIR</string>
    <string name="login_user_password">TRADUCIR</string>
    <string name="login_user_recovery_pass">TRADUCIR</string>
    <string name="login_user_fail_login">TRADUCIR</string>
    <string name="login_user_fail_login_bad_user_pass">TRADUCIR</string>
    <string name="login_user_login">TRADUCIR</string>
    <string name="login_user_logging">TRADUCIR</string>

    <!-- Pantalla de registro -->
    <string name="signup_title">TRADUCIR</string>
    <string name="signup_user_title">TRADUCIR</string>
    <string name="signup_user_username">TRADUCIR</string>
    <string name="signup_user_usermail">TRADUCIR</string>
    <string name="signup_user_userpass">TRADUCIR</string>
    <string name="signup_user_name">TRADUCIR</string>
    <string name="signup_user_lastname">TRADUCIR</string>
    <string name="signup_user_country">TRADUCIR</string>
    <string name="signup_user_phone">TRADUCIR</string>
    <string name="signup_user_birthdate">TRADUCIR</string>
    <string name="signup_user_gender">TRADUCIR</string>
    <string name="signup_user_signup">TRADUCIR</string>
    <string-array name="list_months">
        <item>TRADUCIR</item>
        <item>TRADUCIR</item>
        <item>TRADUCIR</item>
        <item>TRADUCIR</item>
        <item>TRADUCIR</item>
        <item>TRADUCIR</item>
        <item>TRADUCIR</item>
        <item>TRADUCIR</item>
        <item>TRADUCIR</item>
        <item>TRADUCIR</item>
        <item>TRADUCIR</item>
        <item>TRADUCIR</item>
    </string-array>

    <!-- Pantalla de recuperar pass -->
    <string name="forgot_pass_title">TRADUCIR</string>
    <string name="forgot_pass_title_step1">TRADUCIR</string>
    <string name="forgot_pass_title_step2">TRADUCIR</string>
    <string name="forgot_pass_title_step3">TRADUCIR</string>
    <string name="forgot_pass_title_step4">TRADUCIR</string>
    <string name="forgot_pass_user_title">TRADUCIR</string>
    <string name="forgot_pass_btn">TRADUCIR</string>
    <string name="forgot_pass_instructions">TRADUCIR</string>
    <string name="forgot_pass_code_hint">TRADUCIR</string>
    <string name="forgot_pass_instructions2">TRADUCIR</string>
    <string name="forgot_pass_pass1_hint2">TRADUCIR</string>
    <string name="forgot_pass_pass2_hint2">TRADUCIR</string>
    <string name="forgot_pass_last_step">TRADUCIR</string>
    <string name="forgot_pass_email_invalid">TRADUCIR</string>
    <string name="forgot_pass_code_invalid">TRADUCIR</string>

    <!-- Pantalla de settings -->
    <string name="settings_title_user">TRADUCIR</string>
    <string name="settings_title_about_developer">TRADUCIR</string>
    <string name="settings_about_developer">TRADUCIR</string>
    <string name="settings_title_version">TRADUCIR</string>
    <string name="settings_title_app">TRADUCIR</string>
    <string name="settings_title_donate_app">TRADUCIR</string>
    <string name="settings_donate_app">TRADUCIR</string>
    <string name="settings_title_ads_app">TRADUCIR</string>
    <string name="settings_ads_app">TRADUCIR</string>
    <string name="settings_notification_title_mail">TRADUCIR</string>
    <string name="settings_notification_title_calendar">TRADUCIR</string>
    <string name="settings_notification_title_swatch">TRADUCIR</string>
    <string name="settings_title_autologin">TRADUCIR</string>
    <string name="settings_notification_swatch">TRADUCIR</string>
    <string name="settings_notification_calendar">TRADUCIR</string>
    <string name="settings_notification_mail">TRADUCIR</string>
    <string name="settings_autologin">TRADUCIR</string>
    <string name="settings_changed_success">TRADUCIR</string>
    <string name="settings_permisions_app">TRADUCIR</string>
    <string name="settings_title_permisions_app">TRADUCIR</string>
    <string name="settings_title_export_pdf">TRADUCIR</string>
    <string name="settings_export_pdf_false">TRADUCIR</string>
    <string name="settings_export_pdf_true">TRADUCIR</string>
    <string name="settings_notification_app">TRADUCIR</string>
    <string name="settings_notification_title_app">TRADUCIR</string>

    <!-- View AlertDialog  -->
    <string name="alert_dialog_title_info">TRADUCIR</string>
    <string name="alert_dialog_title_error">TRADUCIR</string>

</resources>