<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/account_card_details"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_games"
            android:icon="@drawable/dice"
            android:title="@string/nav_games" />
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/delete_empty"
            android:title="@string/nav_trash" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/wrench"
            android:title="@string/nav_tools" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/account_key"
            android:title="@string/nav_logout" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/power"
            android:title="@string/nav_exit" />
    </group>
</menu>
