<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Activity"
    tools:context="com.olivadevelop.rolermaster.activities.UserLoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/FragmentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_user_title" />

        <LinearLayout style="@style/LineSeparator" />

        <EditText
            android:id="@+id/login_user"
            style="@style/EditText"
            android:hint="@string/login_user_username" />

        <EditText
            android:id="@+id/login_pass"
            style="@style/EditText"
            android:hint="@string/login_user_password" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/Button"
            android:text="@string/login_user_login" />

        <TextView
            android:id="@+id/recoveryPass"
            style="@style/ButtonLink"
            android:text="@string/login_user_recovery_pass" />

    </LinearLayout>
</FrameLayout>
