<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Activity"
    tools:context="com.olivadevelop.rolermaster.activities.UserSignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/FragmentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_user_title" />

        <LinearLayout style="@style/LineSeparator" />

        <EditText
            android:id="@+id/signup_user"
            style="@style/EditText"
            android:hint="@string/signup_user_username" />

        <EditText
            android:id="@+id/signup_email"
            style="@style/EditText"
            android:hint="@string/signup_user_usermail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/signup_pass"
            style="@style/EditText"
            android:hint="@string/signup_user_userpass" />

        <LinearLayout
            style="@style/LineSeparator"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/signup_name"
            style="@style/EditText"
            android:hint="@string/signup_user_name" />

        <EditText
            android:id="@+id/signup_lastname"
            style="@style/EditText"
            android:hint="@string/signup_user_lastname" />

        <EditText
            android:id="@+id/signup_phone"
            style="@style/EditText"
            android:hint="@string/signup_user_phone"
            android:inputType="phone" />


        <LinearLayout
            android:id="@+id/signup_spinners_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="@dimen/fragment_title_margin_lft_rgt"
            android:orientation="horizontal">
            <!--<EditText
                android:id="@+id/signup_birth"
                style="@style/EditText"
                android:hint="@string/signup_user_birthdate" />-->

            <Spinner
                android:id="@+id/signup_user_birth1"
                style="@style/SpinnerCompac" />

            <LinearLayout style="@style/Separator" />

            <Spinner
                android:id="@+id/signup_user_birth2"
                style="@style/SpinnerCompac" />

            <LinearLayout style="@style/Separator" />

            <Spinner
                android:id="@+id/signup_user_birth3"
                style="@style/SpinnerCompac" />


        </LinearLayout>

        <Spinner
            android:id="@+id/signup_user_country"
            style="@style/Spinner" />

        <Spinner
            android:id="@+id/signup_user_gender"
            style="@style/Spinner" />

        <Button
            android:id="@+id/btnsignup"
            style="@style/Button"
            android:text="@string/signup_user_signup" />

    </LinearLayout>

</FrameLayout>
