<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Activity"
    tools:context="com.olivadevelop.rolermaster.activities.fragments.UserForgotPassFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/FragmentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pass_user_title" />

        <LinearLayout style="@style/LineSeparator" />

        <EditText
            android:id="@+id/forgot_pass_mail"
            style="@style/EditText"
            android:hint="@string/signup_user_usermail"
            android:inputType="textEmailAddress"
            android:lines="1" />

        <Button
            android:id="@+id/btnRecovery1"
            style="@style/Button"
            android:text="@string/forgot_pass_btn" />

    </LinearLayout>

</FrameLayout>
