<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Activity"
    tools:context="com.olivadevelop.rolermaster.activities.fragments.BlankFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:alpha=".5"
            android:contentDescription="@string/blank_subtitle"
            android:scaleType="centerCrop"
            android:src="@drawable/fondo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:gravity="center_horizontal"
            android:paddingLeft="@dimen/fragment_title_margin_lft_rgt"
            android:paddingRight="@dimen/fragment_title_margin_lft_rgt"
            android:text="@string/blank_welcome"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/blank_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView2"
            android:gravity="center_horizontal"
            android:paddingLeft="@dimen/fragment_title_margin_lft_rgt"
            android:paddingRight="@dimen/fragment_title_margin_lft_rgt"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/mainCardGame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/blank_username"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/blankLastTitle"
                style="@style/TextSizeSimple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/blank_last_project"
                android:visibility="gone" />

            <TextView
                android:id="@+id/blankLastDate"
                style="@style/TextSizeSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:visibility="gone" />

        </LinearLayout>

    </RelativeLayout>
</FrameLayout>
